
if(NOT EMSCRIPTEN)
    add_subdirectory(${LUCARIA_EXTERNAL_DIR}/alsoft ${CMAKE_CURRENT_BINARY_DIR}/external/alsoft)
endif()
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/bullet ${CMAKE_CURRENT_BINARY_DIR}/external/bullet)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/cereal ${CMAKE_CURRENT_BINARY_DIR}/external/cereal)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/entt ${CMAKE_CURRENT_BINARY_DIR}/external/entt)
if(NOT EMSCRIPTEN)
    add_subdirectory(${LUCARIA_EXTERNAL_DIR}/glfw ${CMAKE_CURRENT_BINARY_DIR}/external/glfw)
endif()
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/glm ${CMAKE_CURRENT_BINARY_DIR}/external/glm)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/imgui ${CMAKE_CURRENT_BINARY_DIR}/external/imgui)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/ogg ${CMAKE_CURRENT_BINARY_DIR}/external/ogg)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/ozz ${CMAKE_CURRENT_BINARY_DIR}/external/ozz)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/stb ${CMAKE_CURRENT_BINARY_DIR}/external/stb)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/vorbis ${CMAKE_CURRENT_BINARY_DIR}/external/vorbis)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/woff ${CMAKE_CURRENT_BINARY_DIR}/external/woff)

file(GLOB_RECURSE lucaria_client_sources "*.cpp")
add_library(lucaria_client STATIC ${lucaria_client_sources})
set_target_properties(lucaria_client PROPERTIES CXX_STANDARD 17)
target_compile_definitions(lucaria_client PUBLIC BT_NO_SIMD_OPERATOR_OVERLOADS)

if(NOT EMSCRIPTEN)
    # target_link_libraries(lucaria_client PUBLIC lucaria_external_alsoft)
    target_link_libraries(lucaria_client PUBLIC OpenAL)
endif()
target_link_libraries(lucaria_client PUBLIC lucaria_external_bullet)
target_link_libraries(lucaria_client PUBLIC lucaria_external_cereal)
target_link_libraries(lucaria_client PUBLIC lucaria_external_entt)
target_link_libraries(lucaria_client PUBLIC lucaria_external_glm)
if(NOT EMSCRIPTEN)
    target_link_libraries(lucaria_client PUBLIC lucaria_external_glfw)
endif()
target_link_libraries(lucaria_client PUBLIC lucaria_external_imgui)
target_link_libraries(lucaria_client PUBLIC lucaria_external_ozz)
target_link_libraries(lucaria_client PUBLIC lucaria_external_stb)
target_link_libraries(lucaria_client PUBLIC lucaria_external_vorbis)
target_link_libraries(lucaria_client PUBLIC lucaria_external_woff)

target_include_directories(lucaria_client PUBLIC ${LUCARIA_INCLUDE_DIR})

if(LUCARIA_DEBUG)
    message("-- Configuring game build options for Debug")
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_DEBUG=1)
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_GUIZMO=1)
else()
    message("-- Configuring game build options for Release")
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_DEBUG=0)
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_GUIZMO=0)
endif()
