# external libraries
if(NOT EMSCRIPTEN)
    add_subdirectory(${LUCARIA_EXTERNAL_DIR}/alsoft ${CMAKE_CURRENT_BINARY_DIR}/external/alsoft)
endif()
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/bullet ${CMAKE_CURRENT_BINARY_DIR}/external/bullet)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/cereal ${CMAKE_CURRENT_BINARY_DIR}/external/cereal)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/entt ${CMAKE_CURRENT_BINARY_DIR}/external/entt)
if(WIN32)
    add_subdirectory(${LUCARIA_EXTERNAL_DIR}/glfw ${CMAKE_CURRENT_BINARY_DIR}/external/glfw)
endif()
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/glm ${CMAKE_CURRENT_BINARY_DIR}/external/glm)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/imgui ${CMAKE_CURRENT_BINARY_DIR}/external/imgui)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/ogg ${CMAKE_CURRENT_BINARY_DIR}/external/ogg)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/ozz ${CMAKE_CURRENT_BINARY_DIR}/external/ozz)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/pfr ${CMAKE_CURRENT_BINARY_DIR}/external/pfr)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/stb ${CMAKE_CURRENT_BINARY_DIR}/external/stb)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/vorbis ${CMAKE_CURRENT_BINARY_DIR}/external/vorbis)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/woff ${CMAKE_CURRENT_BINARY_DIR}/external/woff)

# lucaria client library
file(GLOB lucaria_client_core_sources "core/*.cpp")
file(GLOB lucaria_client_entity_sources "entity/*.cpp")
add_library(lucaria_client STATIC ${lucaria_client_core_sources} ${lucaria_client_entity_sources})
target_include_directories(lucaria_client PUBLIC ${LUCARIA_INCLUDE_DIR})
set_target_properties(lucaria_client PROPERTIES CXX_STANDARD 17)
target_compile_definitions(lucaria_client PUBLIC BT_NO_SIMD_OPERATOR_OVERLOADS) # ozz implements them already
if(NOT EMSCRIPTEN)
    target_link_libraries(lucaria_client PUBLIC lucaria_external_alsoft)
endif()
target_link_libraries(lucaria_client PUBLIC lucaria_external_bullet)
target_link_libraries(lucaria_client PUBLIC lucaria_external_cereal)
target_link_libraries(lucaria_client PUBLIC lucaria_external_entt)
target_link_libraries(lucaria_client PUBLIC lucaria_external_glm)
if(WIN32)
    target_link_libraries(lucaria_client PUBLIC lucaria_external_glfw)
endif()
target_link_libraries(lucaria_client PUBLIC lucaria_external_imgui)
target_link_libraries(lucaria_client PUBLIC lucaria_external_ozz)
target_link_libraries(lucaria_client PUBLIC lucaria_external_pfr)
target_link_libraries(lucaria_client PUBLIC lucaria_external_stb)
target_link_libraries(lucaria_client PUBLIC lucaria_external_vorbis)
target_link_libraries(lucaria_client PUBLIC lucaria_external_woff)


# platform
if(ANDROID)
    message("-- Configuring Lucaria engine for Android platform")
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_ANDROID)
    target_compile_options(lucaria_client PRIVATE -Wno-deprecated-declarations)
	set(NATIVE_APP_GLUE_DIR ${ANDROID_NDK}/sources/android/native_app_glue)
    add_library(android_native_app_glue STATIC ${NATIVE_APP_GLUE_DIR}/android_native_app_glue.c)
    target_include_directories(android_native_app_glue PUBLIC ${NATIVE_APP_GLUE_DIR})
    target_link_libraries(lucaria_client PUBLIC GLESv3 EGL android log android_native_app_glue)
elseif(EMSCRIPTEN)
    message("-- Configuring Lucaria engine for Web platform")
	file(GLOB lucaria_client_platform_web_sources "core/platform/web/*.cpp")
	target_sources(lucaria_client PRIVATE ${lucaria_client_platform_web_sources})
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_WEB)
elseif(WIN32) # add macos & linux
    message("-- Configuring Lucaria engine for Win32/MacOS/Linux platform")
	file(GLOB lucaria_client_platform_glfw_sources "core/platform/glfw/*.cpp")
	target_sources(lucaria_client PRIVATE ${lucaria_client_platform_glfw_sources})
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_GLFW)
elseif(PSP)
    message("-- Configuring Lucaria engine for PlayStation Portable platform")
	file(GLOB lucaria_client_platform_psp_sources "core/platform/psp/*.cpp")
	target_sources(lucaria_client PRIVATE ${lucaria_client_platform_psp_sources})
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PLATFORM_PSP)
endif()

# generator
message("-- Configuring Lucaria engine with ${CMAKE_GENERATOR} generator")
target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_GENERATOR_NAME=${CMAKE_GENERATOR})

# compiler
message("-- Configuring Lucaria engine with ${CMAKE_CXX_COMPILER_ID} compiler")
target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_COMPILER_NAME=${CMAKE_CXX_COMPILER_ID})

# debug
if(LUCARIA_DEBUG)
    message(STATUS "Configuring Lucaria engine with Debug enabled")
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_DEBUG)
else()
    message(STATUS "Configuring Lucaria engine with Debug disabled (${LUCARIA_CONFIG} build)")
endif()

# backend
if(PSP)
    message("-- Configuring Lucaria engine with PSPGU graphics backend")
	file(GLOB lucaria_client_backend_pspgu_sources "core/backend/pspgu/*.cpp")
	target_sources(lucaria_client PRIVATE ${lucaria_client_backend_pspgu_sources})
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_BACKEND_PSPGU)
else()
    message("-- Configuring Lucaria engine with OpenGL graphics backend")
	file(GLOB lucaria_client_backend_opengl_sources "core/backend/opengl/*.cpp")
	target_sources(lucaria_client PRIVATE ${lucaria_client_backend_opengl_sources})
	target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_BACKEND_OPENGL)
endif()

# simd
if(EMSCRIPTEN)
    message("-- Configuring Lucaria engine with SSE2 over WebAssembly 128-bit SIMD")
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_SIMD_SSE20)
elseif(WIN32)
    message("-- Configuring Lucaria engine with SSE4.1 SIMD")
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_SIMD_SSE41)
elseif(ANDROID)
    message("-- Configuring Lucaria engine with NEON SIMD")
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_SIMD_NEON)
else()
    message("-- Configuring Lucaria engine with SIMD disabled")
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_SIMD_OFF)
endif()

# packaged assets
if(LUCARIA_PACKAGE)
    message("-- Configuring Lucaria engine with assets packaging enabled")
    target_compile_definitions(lucaria_client PUBLIC -DLUCARIA_PACKAGED_ASSETS)
else()
    message("-- Configuring Lucaria engine with assets packaging disabled")
endif()
