add_subdirectory(${LUCARIA_EXTERNAL_DIR}/assimp ${CMAKE_CURRENT_BINARY_DIR}/external/assimp)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/capstone ${CMAKE_CURRENT_BINARY_DIR}/external/capstone)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/cereal ${CMAKE_CURRENT_BINARY_DIR}/external/cereal)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/etcpak ${CMAKE_CURRENT_BINARY_DIR}/external/etcpak)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/glm ${CMAKE_CURRENT_BINARY_DIR}/external/glm)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/glfw ${CMAKE_CURRENT_BINARY_DIR}/external/glfw)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/imgui ${CMAKE_CURRENT_BINARY_DIR}/external/imgui)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/ogg ${CMAKE_CURRENT_BINARY_DIR}/external/ogg)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/ozz ${CMAKE_CURRENT_BINARY_DIR}/external/ozz)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/stb ${CMAKE_CURRENT_BINARY_DIR}/external/stb)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/zstd ${CMAKE_CURRENT_BINARY_DIR}/external/zstd)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/ppqsort ${CMAKE_CURRENT_BINARY_DIR}/external/ppqsort)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/nfd ${CMAKE_CURRENT_BINARY_DIR}/external/nfd)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/json ${CMAKE_CURRENT_BINARY_DIR}/external/json)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/md4c ${CMAKE_CURRENT_BINARY_DIR}/external/md4c)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/curl ${CMAKE_CURRENT_BINARY_DIR}/external/curl)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/usearch ${CMAKE_CURRENT_BINARY_DIR}/external/usearch)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/base64 ${CMAKE_CURRENT_BINARY_DIR}/external/base64)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/pugixml ${CMAKE_CURRENT_BINARY_DIR}/external/pugixml)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/tidy ${CMAKE_CURRENT_BINARY_DIR}/external/tidy)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/tracy ${CMAKE_CURRENT_BINARY_DIR}/external/tracy)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/vorbis ${CMAKE_CURRENT_BINARY_DIR}/external/vorbis)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/vorbistools ${CMAKE_CURRENT_BINARY_DIR}/external/vorbistools)
add_subdirectory(${LUCARIA_EXTERNAL_DIR}/woff ${CMAKE_CURRENT_BINARY_DIR}/external/woff)

file(GLOB_RECURSE lucaria_compiler_source "*.cpp")
add_executable(lucaria_compiler ${lucaria_compiler_source})
target_include_directories(lucaria_compiler PRIVATE "${LUCARIA_INCLUDE_DIR}")
set_target_properties(lucaria_compiler PROPERTIES CXX_STANDARD 17)

target_link_libraries(lucaria_compiler PRIVATE lucaria_external_assimp)
target_link_libraries(lucaria_compiler PRIVATE lucaria_external_capstone)
target_link_libraries(lucaria_compiler PRIVATE lucaria_external_cereal)
target_link_libraries(lucaria_compiler PRIVATE lucaria_external_glm)
target_link_libraries(lucaria_compiler PRIVATE lucaria_external_ozz)
target_link_libraries(lucaria_compiler PRIVATE lucaria_external_stb)
target_link_libraries(lucaria_compiler PRIVATE lucaria_external_tracy)

add_dependencies(lucaria_compiler lucaria_external_etcpak)
add_dependencies(lucaria_compiler lucaria_external_gltf2ozz)
add_dependencies(lucaria_compiler lucaria_external_oggenc)
add_dependencies(lucaria_compiler lucaria_external_woff2compress)

target_include_directories(lucaria_compiler BEFORE PRIVATE "${lucaria_patched_imgui_dir}")