cmake_minimum_required(VERSION 3.13)
project(lucaria_game LANGUAGES C CXX)
if(NOT LUCARIA_GAME_DIR)
    message(FATAL_ERROR "LUCARIA_GAME_DIR is required")
endif()
if(NOT LUCARIA_TARGET_PLATFORM)
    message(FATAL_ERROR "LUCARIA_TARGET_PLATFORM is required")
endif()
if(NOT EXISTS "${LUCARIA_GAME_DIR}/build.cmake")
    message(FATAL_ERROR "Missing game build script: ${LUCARIA_GAME_DIR}/build.cmake")
endif()
include("${LUCARIA_CMAKE_DIR}/game_api.cmake")
add_subdirectory(
    "${LUCARIA_SOURCE_DIR}/runtime"
    "${LUCARIA_BINARY_DIR}/runtime/${LUCARIA_TARGET_PLATFORM}")
include("${LUCARIA_GAME_DIR}/build.cmake")
if(NOT LUCARIA_TARGET)
    message(FATAL_ERROR "build.cmake must call add_lucaria_game(<output_name> SOURCES ...)")
endif()
include("${LUCARIA_CMAKE_DIR}/make_finalize.cmake")
lucaria_make_finalize()
